--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spacex",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://D1VORY.github.io/spacex_spa",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,6 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-youtube": "^7.12.0"
   }
